--- a/job_portal/portal/static/portal/style.css
+++ b/job_portal/portal/static/portal/style.css
@@ -908,7 +908,8 @@ footer {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    
     animation: sectionTitleGradient 6s ease-in-out infinite alternate;
 }
 @keyframes sectionTitleGradient {
